--- a/templates/letters.html
+++ b/templates/letters.html
@@ -6,7 +6,9 @@
 
 {% block main %}
     <h1>Countdown Letters Game</h1>
-    
+
+    <canvas id="clock-canvas" width="200" height="200"></canvas>
+
     <div class="tiles">
         {% for n in range(9) %}
             <div class="tile">&nbsp;</div>
@@ -17,8 +19,7 @@
         <button class="btn btn-primary" id="choose-vowel">Choose Vowel</button>
         <button class="btn btn-primary" id="choose-consonant">Choose Consonant</button>
     </div>
-    
-    <div id="clock" class="clock"></div>
+
     <div id="check-word">
         Time's up! How did you get on? What was your best word?
         <form id="check-word-form" action="{{ url_for('check_word') }}">
