--- a/templates/letters.html
+++ b/templates/letters.html
@@ -8,6 +8,11 @@
     <h1>Countdown Letters Game</h1>
 
     <canvas id="clock-canvas" width="200" height="200"></canvas>
+    <audio id="audio">
+        <source src="{{ url_for('static', filename='music.ogg') }}" type="audio/ogg">
+        <source src="{{ url_for('static', filename='music.mp3') }}" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
     <div class="tiles">
         {% for n in range(9) %}
