Integrated third party number solver

--- a/templates/numbers.html
+++ b/templates/numbers.html
@@ -29,7 +29,9 @@
         <p>Your target is:</p>
         <div class="tile">&nbsp;</div>
     </div>
-    
+
+    <div id="solution"></div>
+
     <div id="play-again">
         <a href="/" class="btn btn-default">Play again</a>
     </div>
